templates/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/wgnet: "true"
        io.kompose.service: wordpress
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: db:3306
        - name: WORDPRESS_DB_PASSWORD
          value: Nettantra@db
        - name: WORDPRESS_DB_USER
          value: wordpress
        image: wordpress:6.0.0-php8.0-apache
        imagePullPolicy: "IfNotPresent"
        name: wordpress
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
