templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  type: NodePort
  ports:
  - name: "8000"
    port: 8000
    targetPort: 80
    nodePort: 31256
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
