templates/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  type: NodePort
  ports:
  - name: "8008"
    port: 8008
    targetPort: 80
    nodePort: 31255
  selector:
    io.kompose.service: wordpress
status:
  loadBalancer: {}
